# wraft

./: .buildpacks  .credo.exs  .dockerignore  .env.example  .envrc  .formatter.exs  .gitattributes  .gitignore  .gitlab-ci.yml  .iex.exs  .pre-commit-config.yaml  .tool-versions  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  INSTALLATION.md  Makefile  README.md  SECURITY.md  charts.tex  cover.tex  coveralls.json  docker-compose.yml  elixir_buildpack.config  entrypoint.sh  entrypoint_dev.sh  index.txt  mix.exs  package-lock.json  sample.tex  template.tex  template2.tex
.github/: PULL_REQUEST_TEMPLATE.md
.github/.well-known/: funding-manifest-urls
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: lint-pr-title.yml
assets/: package-lock.json  package.json  tailwind_heroicons.js
assets/css/: admin.css  phoenix.css
assets/js/: admin.js  app.js  socket.js
config/: config.exs  dev.exs  prod.exs  prod.secret.exs  runtime.exs  test.exs
dynamic/: additionals.md  duruper.md  intro.md  lawstore.md  others.md  pricing.md  proposal.md  proposal_.md  team.md  xpresslane.md
lib/: ex_starter.ex  ex_starter_web.ex  starter.ex  starter_web.ex  wraft_doc.ex  wraft_doc_web.ex
native/pdf_analyzer/: Cargo.toml
native/pdf_analyzer/src/: common.rs  latex.rs  lib.rs  typst.rs
plans/: opencode-selection-fields-plan.md
scripts/: .env.prod  all.sh  build-dev.sh  build.sh  clean.sh  db-start.sh  ingress.yaml  k3d_register.sh  network.sh  registries.yaml  run.sh  start.sh
test/: .gitlab-ci.yml  test_helper.exs
(+1601 files in other folders)
